--- a/styles.css
+++ b/styles.css
@@ -704,3 +704,16 @@ mark.important {
   font-weight: 700;
   line-height: 0em;
 }
+@media only screen and (max-width: 1007px) {
+  .learn-more {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    margin: 1em;
+  }
+  .learn-more-1,
+  .learn-more-2 {
+    width: 100%;
+  }
+}
