--- a/styles.css
+++ b/styles.css
@@ -705,11 +705,13 @@ mark.important {
   line-height: 0em;
 }
 @media only screen and (max-width: 1007px) {
+  body {
+    width: 100vw;
+  }
   .learn-more {
     display:flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
     margin: 1em;
   }
   .learn-more-1,
